- BUG#18109179: Unable to install fabric with --user option
- BUG#18117930: mysqlserverclone fails to spawn server if datadir path is long
- BUG#18203946: the rpl_admin_gtid test fails on some machines
- BUG#18275566: method to find errant transaction fails with 5.6.9 servers
- BUG#18339351: ports returned by get_next_port in mutlib can be in use
- BUG#71498: destination access check to strict for mysqldbcopy
- BUG#71628: Start command generated by serverclone does not run as is
- BUG#71654: loginpath handling it not correct
- WL#6291: replication synchronization checker
- WL#7204: Multi-source Replication

Release 1.4.1 (Released November 26, 2013)
------------------------------------------

- BUG#17555531: windows source installation fails in trying

Release 1.3.6 (Released November 26, 2013)
------------------------------------------

- BUG#13417229: mysqldbexport/mysqldbimport doesn't work with non-latin data
- BUG#13563921: mysqlmetagrep does not search the body of all objects
- BUG#13572964: mysqlprocgrep missing kill process by id
- BUG#13773247: mysqlserverclone wrongly states it can only clone local server
- BUG#14181681: server info should include the log files (error, general, slow)
- BUG#14725390: multithreaded copy, export, import
- BUG#16226348: test server_info_errors does not execute correctly on windows
- BUG#16386941: Parsing errors to identify treatment instead of use errno
- BUG#17066910: a killed connection can cause failover
- BUG#17214291: cannot access login-path with dashes in the name
- BUG#17217461: mysqluserclone throws exception when --source omitted
- BUG#17242369: extend mysqlfrm to produce .frm file
- BUG#17347424: No MySQL Utilities package for MAC OS X
- BUG#17393523: Utilities can not be upgraded using RPM distribution pkg
- BUG#17393742: Debian pkgs can't use C/py if License types are different
- BUG#17415167: mysqluc crashes when pressing home button on windows