@@ -17,7 +17,7 @@
 \pgndec\pard\plain \s20\ql\widctlpar\faauto\li0\ri0\lin0\rin0\fi0\ltrpar{\*\hyphen2\hyphlead2\hyphtrail2\hyphmax0}\cf0\dbch\af10\langfe1033\dbch\af13\afs22\alang1025\kerning1\loch\f5\fs22\lang1033\ql\widctlpar\faauto\li0\ri0\lin0\rin0\fi0{\b\langfe1033\dbch\af13\afs22\alang1025\rtlch \ltrch\loch\fs16\lang1033\loch\f8
 MySQL Utilities version v1.4 - MySQL Workbench Distribution 6.0}
 \par \pard\plain \s20\ql\widctlpar\faauto\li0\ri0\lin0\rin0\fi0\ltrpar{\*\hyphen2\hyphlead2\hyphtrail2\hyphmax0}\cf0\dbch\af10\langfe1033\dbch\af13\afs22\alang1025\kerning1\loch\f5\fs22\lang1033\ql\widctlpar\faauto\li0\ri0\lin0\rin0\fi0{\b\langfe1033\dbch\af13\afs22\alang1025\rtlch \ltrch\loch\fs16\lang1033\loch\f8
-Copyright (c) 2012, 2013 Oracle and/or its affiliates. All rights reserved.}
+Copyright (c) 2012, 2014 Oracle and/or its affiliates. All rights reserved.}
 \par \pard\plain \s20\ql\widctlpar\faauto\li0\ri0\lin0\rin0\fi0\ltrpar{\*\hyphen2\hyphlead2\hyphtrail2\hyphmax0}\cf0\dbch\af10\langfe1033\dbch\af13\afs22\alang1025\kerning1\loch\f5\fs22\lang1033\ql\widctlpar\faauto\li0\ri0\lin0\rin0\fi0\langfe1033\dbch\af13\afs22\alang1025\rtlch \ltrch\loch\fs16\lang1033\loch\f8
 
 \par \pard\plain \s20\ql\widctlpar\faauto\li0\ri0\lin0\rin0\fi0\ltrpar{\*\hyphen2\hyphlead2\hyphtrail2\hyphmax0}\cf0\dbch\af10\langfe1033\dbch\af13\afs22\alang1025\kerning1\loch\f5\fs22\lang1033\ql\widctlpar\faauto\li0\ri0\lin0\rin0\fi0{\langfe1033\dbch\af13\afs22\alang1025\rtlch \ltrch\loch\fs16\lang1033\loch\f8
