@@ -8,7 +8,7 @@ under a commercial license and the GNU General Public
 License does not apply. MySQL Utilities is brought
 to you by Oracle.
 
-Copyright (c) 2011, 2013, Oracle and/or its affiliates. All rights reserved.
+Copyright (c) 2011, 2014, Oracle and/or its affiliates. All rights reserved.
 
 This distribution may include materials developed by third
 parties. For license and attribution notices for these
