@@ -18,6 +18,7 @@
 
 
 import os
+import time
 
 from datetime import date
 from distutils import log
@@ -48,7 +49,7 @@ under a commercial license and the GNU General Public
 License does not apply. MySQL Utilities is brought
 to you by Oracle.
 
-Copyright (c) 2011, 2013, Oracle and/or its affiliates. All rights reserved.
+Copyright (c) 2011, {0}, Oracle and/or its affiliates. All rights reserved.
 
 This distribution may include materials developed by third
 parties. For license and attribution notices for these
@@ -56,7 +57,7 @@ materials, please refer to the documentation that accompanies
 this distribution (see the "Licenses for Third-Party Components"
 appendix) or view the online documentation at 
 <http://dev.mysql.com/doc/>
-"""
+""".format(time.strftime('%Y'))
 
 COMMERCIAL_SETUP_PY = """#!/usr/bin/env python
 # -*- coding: utf-8 -*-
