@@ -20,6 +20,8 @@ Release 1.4.2 (Released March 12, 2014)
 - BUG#18203946: the rpl_admin_gtid test fails on some machines
 - BUG#18275566: method to find errant transaction fails with 5.6.9 servers
 - BUG#18339351: ports returned by get_next_port in mutlib can be in use
+- BUG#18413200: using utilities with old versions of c/python throws an exception
+- BUG#18439226: Copyright year information needs to be updated
 - BUG#71498: destination access check to strict for mysqldbcopy
 - BUG#71628: Start command generated by serverclone does not run as is
 - BUG#71654: loginpath handling it not correct
